# bibliographie-daten

./: .gitignore  MANIFEST.in  Makefile  README.md  environment.yml  requirements.txt  setup.cfg
bibliographiedaten/: command_line.py  marcxml.py  record.py  utils.py
bibliographiedaten/Scripts/: activate  activate.bat  conda  conda.bat  deactivate  deactivate.bat
data/: gnd_ids.txt
tests/: test_compress_gzip.py  test_csv_export.py  test_decompress_gzip.py  test_record.py  test_utils.py
