[metadata]
name = bibliographiedaten
version = file: VERSION
description = Tool zur Auswertung von Bibliographiedaten.
long_description = file: README.md
long_description_content_type = text/markdown
license = Copyright
author = Max Planck Institute for Empirical Aesthetics
author_email = hismuslog@ae.mpg.de
url = https://gitlab.gwdg.de/mpiea/hismuslog/bibliographie-daten
project_urls =
    Bug Tracker = https://gitlab.gwdg.de/mpiea/hismuslog/bibliographie-daten/issues
    Source Code = https://gitlab.gwdg.de/mpiea/hismuslog/bibliographie-daten
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = find:
setup_requires =
install_requires =
    fire
    pandas
    pymarc
    setuptools>=40.0.0
python_requires = >=3.5, <=3.8.1

[options.entry_points]
console_scripts =
    bd = bibliographiedaten.command_line:main

[options.extras_require]
dev =
    autopep8
    black
    check-manifest
    coverage
    pep8
    pylint
    radon
    rope
    wheel
build =
    wheel

[bdist_wheel]
universal = 1

[pep8]
ignore = E226,E302,E41
max-line-length = 120
